--- a/Events/Main_iPhone.storyboard
+++ b/Events/Main_iPhone.storyboard
@@ -1103,7 +1103,6 @@
                                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </state>
                                     <connections>
-                                        <action selector="clickedMyCalender:" destination="uN1-jK-Wuq" eventType="touchUpInside" id="g27-GU-tZY"/>
                                         <segue destination="ymv-lc-u6U" kind="push" animates="NO" id="U3F-sb-sE9"/>
                                     </connections>
                                 </button>
@@ -1115,7 +1114,6 @@
                                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </state>
                                     <connections>
-                                        <action selector="clickedMyAttending:" destination="uN1-jK-Wuq" eventType="touchUpInside" id="BPF-kB-MPo"/>
                                         <segue destination="uN1-jK-Wuq" kind="push" animates="NO" id="AVa-mX-VeI"/>
                                     </connections>
                                 </button>
@@ -1408,10 +1406,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="actionbar_bg_white.png" translatesAutoresizingMaskIntoConstraints="NO" id="mkr-sh-u2G">
-                                <rect key="frame" x="0.0" y="64" width="320" height="554"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="647"/>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" editable="NO" text="Hello lorem ipsum" translatesAutoresizingMaskIntoConstraints="NO" id="YS9-jV-dl6">
-                                <rect key="frame" x="0.0" y="64" width="320" height="554"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="647"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -2035,7 +2033,6 @@
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <connections>
-                                            <action selector="clickedMyFavourites:" destination="ymv-lc-u6U" eventType="touchUpInside" id="svH-QT-pob"/>
                                             <segue destination="BPn-5N-zfJ" kind="push" animates="NO" id="C9L-jn-ty6"/>
                                         </connections>
                                     </button>
@@ -2043,7 +2040,7 @@
                                 <color key="backgroundColor" red="0.22352941179999999" green="0.23529411759999999" blue="0.23529411759999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="85" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SzQ-aL-qMg">
-                                <rect key="frame" x="0.0" y="395" width="320" height="146"/>
+                                <rect key="frame" x="0.0" y="444" width="320" height="185"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.36862745099999999" green="0.3803921569" blue="0.39607843139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
@@ -2375,7 +2372,7 @@
         <segue reference="U3F-sb-sE9"/>
         <segue reference="6n8-q3-lxy"/>
         <segue reference="okc-1f-ZH5"/>
-        <segue reference="5BI-DP-Akc"/>
+        <segue reference="GQZ-yq-JN7"/>
         <segue reference="C9L-jn-ty6"/>
         <segue reference="c3b-7q-UHr"/>
         <segue reference="Yzg-yO-FJ6"/>
